--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@bokeh/bokehjs": "^3.7.2",
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@mui/icons-material": "^7.0.1",
     "@mui/material": "^7.0.1",
     "axios": "^1.8.4",
     "cesium": "^1.127.0",
+    "plotly.js": "^3.0.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-plotly.js": "^2.6.0",
     "react-router-dom": "^7.4.1",
     "resium": "^1.19.0-beta.1"
   },
